# repro

./: Cargo.toml  README.md
script/: Forc.toml
script/src/: main.sw
src/: lib.rs
